--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,37 +15,37 @@ x-spark-common: &spark-common
   networks:
    - streamingnet
 
+
+# Services configuration
 services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    hostname: zookeeper
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    healthcheck:
+      test: ["CMD", "bash", "-c" , "echo 'ruok' | nc localhost 2181"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - streamingnet
 
-    zookeeper:
-      image: confluentinc/cp-zookeeper:7.4.0
-      hostname: zookeeper
-      container_name: zookeeper
-      ports:
-        - "2181:2181"
-      environment: 
-        ZOOKEEPER_CLIENT_PORT: 2181
-        ZOOKEEPER_TICK_TIME: 2000
-
-      healthcheck:
-        test: ['CMD','bash', '-c', "echo 'rouk' | nc localhost 2181"]
-        interval: 10s
-        timeout: 5s
-        retries: 5
-      networks: 
-        - streamingnet
-
-    broker: 
-      image: confluentinc/cp-server:7.4.0
-      hostname: broker
-      container_name: broker
-      depends_on:
-        zookeeper:
-          condition: service_healthy
-      ports: 
-        - "9092:9092"
-        - "9101:9101"
-      environment:
+  broker:
+    image: confluentinc/cp-server:7.4.0
+    hostname: broker
+    container_name: broker
+    depends_on:
+      zookeeper:
+        condition: service_healthy
+    ports:
+      - "9092:9092"
+      - "9101:9101"
+    environment:
         KAFKA_BROKER_ID: 1
         KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT, PLAINTEXT_HOST:PLAINTEXT
@@ -64,28 +64,28 @@ services:
         CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 1
         CONFLUENT_METRICS_ENABLE: 'false'
         CONFLUENT_SUPPORT_CUSTOMER_IO: 'anonymous'
-      healthcheck:
-        test: ['CMD','bash', '-c', "nc -z localhost 9092"]
+    healthcheck:
+        test: ['CMD','bash', '-c', "nc -z localhost 29092"]
         interval: 10s
         timeout: 5s
         retries: 5
-      networks:
-        - streamingnet
-
-    spark-master:
-      image: bitnami/spark:latest
-      volumes:
-        - ./jobs:/opt/bitnami/spark/jobs
-      command: bin/spark-class org.apache.spark.deploy.master.Master
-      ports:
-        - "9090:8080"
-        - "7077:7077"
-      networks:
-        - streamingnet
-    spark-worker-1:
-      <<: *spark-common
-    spark-worker-2:
-      <<: *spark-common
+    networks:
+      - streamingnet
+    
+  spark-master:
+    image: bitnami/spark:latest
+    volumes:
+      - ./jobs:/opt/bitnami/spark/jobs
+    command: bin/spark-class org.apache.spark.deploy.master.Master
+    ports:
+      - "9090:8080"
+      - "7077:7077"
+    networks:
+      - streamingnet
+  spark-worker-1:
+    <<: *spark-common
+  spark-worker-2:
+    <<: *spark-common
       
 networks:
   streamingnet:
